[package]
name = "unreal-analytics-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
rocket = { version = "0.5.0", features = ["json"] }
toml = "0.8.10"
futures = "0.3"
webhook = "2.1.2"

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["sync"]

[profile.dev]
opt-level = 1
