[package]
name = "unreal-analytics-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
rocket = { version = "0.5.0", features = ["json"] }
toml = "0.8.10"
futures = "0.3"
tokio = "1.36.0"
chrono = "0.4.34"
dia-i18n = "0.10.0"
once_cell = "1.19.0"

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["sync"]

[dependencies.bson]
version = "2.9.0"
features = ["chrono-0_4"]

[dependencies.serenity]
version = "0.12"
features = ["collector", "utils"]

[profile.dev]
opt-level = 0
incremental = true
