[package]
name = "unreal-todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.10"
futures = "0.3"
tokio = "1.36.0"
chrono = "0.4.34"
dia-i18n = "0.10.0"
once_cell = "1.19.0"
tungstenite = "0.21.0"
tokio-tungstenite = "*"
futures-channel = "0.3"
futures-util = "0.3"
mio = "0.8.11"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2.11"
rocket = { version = "0.5.0", features = ["json"] }
async-broadcast = "0.7.0"

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["sync"]

[dependencies.bson]
version = "2.9.0"
features = ["chrono-0_4"]

[profile.dev]
opt-level = 0
incremental = true
